wp_instaroll/admin_style.css
@charset "utf-8";

#InstagramPhotosTable td {
	padding: 7px 7px 4px 7px;
}
#InstagramPhotosTable img {
	max-width: 310px;
	max-height: auto;
}

span.top_right_buttons {
	float: right;
}

img.profilePicture {
	border-style: solid;
	border-width: 2px;
	border-color: #21759B;
}

